--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oqzulz329/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】全球病例突破4000万大关</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.19】全球病例突破4千万大关</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228568126-600x400.jpg" />
 <h6>2020年9月17日，巴西帕拉（Para）州的拜克索康汀斯（Baixo Tocantins），政府卫生工作者在的伊加拉佩·米里（Igarape-Miri）的穆鲁蒂普库河（Murutipucu River）的河滨社区为一名做中共病毒测试。 （Photo by TARSO SARRAF / AFP）
 </h6>
@@ -16,8 +16,7 @@
 <strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
 <strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
 <strong><ahref="#_Toc2020101907">欧洲多地爆发抵制防疫措施抗议活动</a></strong><br />
-<strong><ahref="#_Toc2020101906">南非卫生部长病毒测试呈阳性</a></strong><br />
-<strong><ahref="#_Toc2020101904">IMF：全面封锁可能性较小</a></strong></p>
+<strong><ahref="#_Toc2020101906">南非卫生部长染疫</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -30,17 +29,20 @@
 <h3>全球病例突破4000万大关</h3>
 <figure id="attachment_12434612" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228152528.jpg"><img class="size-large wp-image-12434612" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228152528-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月22日，印度首都新德里的一家火化厂，亲戚们看着身穿防护服的工人准备将死于中共病毒的患者尸体进行火化。（Xavier GALIANA / AFP）</figcaption></figure>
 <p>周一（10月19日），全球中共病毒病例超过了4000万；北半球的冬季来临加剧了病毒的蔓延。</p>
-<p>约翰霍普金斯大学的数据显示，截至美东时间周一上午9：30，全球的中共病毒病例的总数达到了40,122,835例，死亡人数为1,114,857人。</p>
+<p>约翰霍普金斯大学的数据显示，截至美东时间周一上午9：30，全球的中共病毒病例的总数达到了40,122,835例。</p>
 <p>专家认为，鉴于测试不足??和某些国家可能未充分报告的情况，病例和死亡的真实数字可能要高得多。</p>
-<p>路透社报导，大流行病的蔓延速度在继续加快。从全球3000万例病例到4000万例，只用了32天，而从2000万增加到3000万例则用了38天，1000万到2000万之间用了44天，而自1月初在中国武汉报导第一例病例以来，到1000万例共用了三个月时间。。</p>
+<p>路透社报导，大流行病的蔓延速度在继续加快。从全球3000万例病例到4000万例，只用了32天，而从2000万增加到3000万例则用了38天，1000万到2000万之间用了44天，而自1月初在中国武汉报导第一例病例以来，到1000万例共用了三个月时间。</p>
 <p>上周末，全球中共病毒新感染病例有创纪录的一天内超过40万。</p>
 <p>在过去的一周中，每天平均有大约347,000例病例，而10月第一周则为292,000例。</p>
 <p>美国、印度和巴西仍然是世界上受中共病毒影响最严重的国家。北美、中美洲和南美洲的COVID-19病例约占全球病例的47.27％或近一半。</p>
-<p>&nbsp;</p>
 <p>欧洲的新病例每天增长超过15万，因为意大利、荷兰、德国、奥地利、波兰、乌克兰、塞浦路斯和捷克共和国等许多国家/地区报告的感染每天都在创历史新高的增加。</p>
 <p>欧洲目前占全球病例的17％以上，而与该病毒有关的死亡人数占全球的22％。</p>
-<p>&nbsp;</p>
-<p>自大流行开始以来，已有超过110万人死于COVID-19，全球病死率徘徊在总病例的2.8％左右。</p>
+<p>在英国，首相约翰逊试图通过实施地区性封锁措施来遏制第二波感染。</p>
+<p>法国则在巴黎等数个热点城市和地区实行宵禁，而其他欧洲国家则关闭学校、取消非必需手术、并招募学生医生。</p>
+<p>川普总统呼吁扩大经济刺激法案的金额，美国的感染人数已超过800万人，中西部各州的病例在上升。</p>
+<p>印度至周六的累计总病例数为743万，活跃感染人数在1个半月内首次下滑至80万以下。</p>
+<p>受中共病毒打击最严重的中东国家伊朗，由于首都德黑兰报告的死亡人数上升至3万以上，因此将限制和封锁延长到了周六的第三周。</p>
+<p>自大流行开始以来，已有至少1,114,857人死于COVID-19，全球死亡率徘徊在总病例的2.8％左右。</p>
 <p>（注：因中共和伊朗隐瞒疫情数据，其真实数据比统计的要高，因此排名没有将其计算在内。）</p>
 <h3>葡萄牙病例总数突破10万</h3>
 <p>葡萄牙周一（19日）报告了1,949例新增病例，这是该国连续第12天新增病例超过一千。</p>
@@ -185,7 +187,7 @@
 <p>Civiqs的民意调查数据显示，在南卡罗来纳州，有44%的共和党人表示根本不担心本地区的病毒爆发，而民主党人则只有2%。在其他共和党州长的州，例如乔治亚州和佛罗里达州，百分比相似。</p>
 <figure id="attachment_12484873" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_1TK546.jpg"><img class="wp-image-12484873 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_1TK546-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">图为佛州一商店。(Eva Marie UZCATEGUI/AFP)</figcaption></figure>
 <p><a name="_Toc2020101906"></a></p>
-<h3>南非卫生部长病毒测试呈阳性</h3>
+<h3>南非卫生部长染疫</h3>
 <p>周日（10月18日），南非卫生部长兹维利·姆赫兹（Zweli Mkhize）表示，他和妻子May对Covid-19的检测呈阳性。</p>
 <p>部长周六开始出现染疫症状后，两人接受了测试。姆赫兹因其积极应对大流行病而受到广泛赞誉。</p>
 <p>“我感到异常疲惫，随着一天的（病情）发展，我开始食欲不振。我的妻子咳嗽，头晕，感到筋疲力尽。”姆基兹在周日的一份声明中说，“我现在在家中隔离，我和妻子都对我们将完全从这种病毒中恢复感到乐观。”</p>
@@ -269,7 +271,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/7/n10959110.md#1" target="_blank">冯八飞：请问候劳鹤——真正的知识分子爱因斯坦</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -296,6 +298,6 @@
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】全球病例突破4000万大关</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/17/n12482137.htm">【最新疫情10.19】全球病例突破4千万大关</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
