--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -271,7 +271,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/7/n10959110.md#1" target="_blank">冯八飞：请问候劳鹤——真正的知识分子爱因斯坦</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/3/n10359777.md#1" target="_blank">张立先：拜谒李庄</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
