--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -10,13 +10,13 @@
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
 <p><strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
-<strong><ahref="#_Toc2020101912">专家：接下来6至12周是大流行最黑暗时期</a></strong><br />
+<strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong><br />
 <strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
-<strong><ahref="#_Toc2020101910">全球病例数突破4千万 死亡逾111万</a></strong><br />
+<strong><ahref="#_Toc2020101910b">英国议会女议员染疫住院</a></strong><br />
+<strong><ahref="#_Toc2020101910a">俄新增病例近1.6万 再创单日新高</a></strong><br />
+<strong><ahref="#_Toc2020101910">印度新增55,722例确诊</a></strong><br />
 <strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
-<strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong><br />
-<strong><ahref="#_Toc2020101907">欧洲多地爆发抵制防疫措施抗议活动</a></strong><br />
-<strong><ahref="#_Toc2020101906">南非卫生部长染疫</a></strong></p>
+<strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -61,11 +61,11 @@
 <p>尽管全美各地病例数正在上升，但首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
 <p>他上周日（18日）在受访中告诉CBS首席医学记者拉普克（Jonathan LaPook），疲惫的美国公众应该将公共卫生措施视为安全地保持开放的一种方式。</p>
 <p>专家说，美国人通过听从官员几个月来倡导的指导方针，可以帮助控制病毒。这些指导方针包括避免置身于拥挤的环境、保持距离，户外仅举行小型聚会和戴口罩。</p>
-<h3>疫情致空中旅行停滞以来 TSA单日筛查人数首破百万</h3>
+<p><a name="_Toc2020101912"></a></p>
+<h3>TSA单日筛查人数首破百万</h3>
 <p>美国运输安全管理局（TSA）表示，该机构上周日（18日）对超过100万人进行了筛查，这是自今年春季大流行导致空中旅行停滞以来，首次突破百万人。</p>
 <p>TSA说，上周日筛查了1,031,505人，大约是去年同一天筛查的260万人的40％。</p>
 <p>包括机场筛查官在内的2,000多名TSA员工已经染疫，其中8人死亡。</p>
-<p><a name="_Toc2020101912"></a></p>
 <h3>专家：接下来6至12周将是大流行最黑暗时期</h3>
 <p>上周日（18日），美国明尼苏达大学传染病研究与政策中心主任奥斯特霍姆（Michael Osterholm）在NBC节目“与媒体见面”中警告，“接下来的6至12周将是整个大流行最黑暗的时期”。</p>
 <blockquote class="twitter-tweet">
@@ -74,7 +74,8 @@
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 奥斯特霍姆告诉该节目主持人查克·托德（Chuck Todd），尽管取得了一些进展，但“疫苗要到明年第三季度才能以任何有意义的方式提供。”</p>
 <p>奥斯特霍姆在节目中还表示： “我们确实有疫苗和治疗方法，但接下来的6到12周将是整个大流行病最黑暗的时期。”</p>
-<h3>英国博尔顿女议员染疫住院</h3>
+<p><a name="_Toc2020101910b"></a></p>
+<h3>英国议会女议员染疫住院</h3>
 <p>英国大曼彻斯特地区博尔顿议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
 <blockquote class="twitter-tweet">
 <p dir="ltr" lang="en">EXCLUSIVE: Manchester MP Yasmin Qureshi Hospitalised With Covid <ahref="https://t.co/sC8QbIXifN">https://t.co/sC8QbIXifN</a> <ahref="https://t.co/9zWqMsHWD4"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="9zWqMsHWD4</a></p>
@@ -92,7 +93,7 @@
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 根据欧洲疾病预防控制中心的数据，在过去14天内，比利时记录了每10万人中超过700人感染，是欧洲第二糟糕记录，仅次于捷克的即每10万人中828人感染。</p>
 <h3>瑞士新增近9千例确诊</h3>
-<p>瑞士上周末报告了8,737例新增病例。</p>
+<p>瑞士周末报告了8,737例新增病例。</p>
 <p>据路透社报导，瑞士公共卫生机构报告说，在瑞士及其小邻国列支敦士登公国，确诊病例共计83,159例。</p>
 <p>死亡人数新增了14人，达到1,837人。</p>
 <h3>治疗染疫患者 波兰将设立首座战地医院</h3>
@@ -104,7 +105,7 @@
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 波兰上周五（16日）报告新增132人死亡，创下自大流行开始以来单日最高纪录。</p>
 <p>根据约翰·霍普金斯大学（Johns Hopkins University）的数据，迄今波兰已录得175,766例确诊病例、3,573例死亡病例。</p>
-<h3>单日感染数稳步上升 奥地利限制聚会人数</h3>
+<h3>单日感染数继续上升 奥地利限制聚会人数</h3>
 <p>奥地利正在艰难遏制单日感染数的稳步上升。总理塞巴斯蒂安·库尔茨（Sebastian Kurz）周一（19日）表示，该国正在把室内聚会限制在最多6人，室外最多12人。</p>
 <p>奥地利上周六（17日）新增确诊病例达到1,747例，创下单日最高纪录。</p>
 <h3>比利时实行宵禁 瑞士强制戴口罩</h3>
@@ -115,23 +116,15 @@
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 欧洲已有超过25万人丧生。那里日益加剧的危机与澳洲形成了对比。澳洲第二大城市已开始放宽封锁。这种封锁曾使数以百万计的人基本上被限制在家中数月之久。</p>
 <p>比利时在应对本国病例激增之际，全国的咖啡馆和餐馆关闭了4个星期。该国病例激增是全欧洲感染激增的一部分。过去一周来，整个欧洲的病例数激增了44％。</p>
-<p><a name="_Toc2020101910"></a></p>
-<h3>全球病例数突破4千万 死亡逾111万</h3>
-<p>根据约翰·霍普金斯大学（Johns Hopkins University）的统计，全球中共病毒病例总数已突破4千万。</p>
-<p>截至周一（19日），全球感染总人数达到40,050,902人，死亡总人数达到1,113,750人（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
-<p>确诊数和死亡数最高的3个国家是美国、印度和巴西（中国和印度未列入此排名）。</p>
-<p>美国已有近820万人染疫，死亡人数接近22万。这两项数据均位列第一。</p>
-<p>印度近760万人染疫，排名世界第二；死亡人数超过11万，位居世界第三。</p>
-<p>巴西520万人染疫，位居世界第三；死亡超过15万人，排名世界第二。</p>
-<p>同时，欧洲疾病预防控制中心报告，欧洲经济区的死亡人数已超过20万，病例总数达到480万。</p>
-<h3>俄新增病例激增至近1.6万例 再创单日新高</h3>
+<p><a name="_Toc2020101910a"></a></p>
+<h3>俄新增病例近1.6万 再创单日新高</h3>
 <p>俄罗斯官方的数据显示，周一（19日）该国单日新增病例激增至新高，达15,982例，其中包括首都莫斯科的5,376例，全国病例总数达到 1,415,316例。</p>
 <blockquote class="twitter-tweet">
 <p dir="ltr" lang="en"><ahref="https://twitter.com/hashtag/BREAKING?src=hash&amp;ref_src=twsrc%5Etfw">#BREAKING</a> Russia confirmed 15,982 new Covid-19 cases Monday, bringing its official number of cases to 1,415,316 and breaking the country&#8217;s record for new infections <ahref="https://t.co/1wwxiGFit7">https://t.co/1wwxiGFit7</a></p>
 <p>— The Moscow Times (@MoscowTimes) <ahref="https://twitter.com/MoscowTimes/status/1318095204835012609?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 当局报告在过去24小时内新增179人死亡。至此，官方报告的死亡总数达到24,366人。</p>
-<h3>莱德斯罗杯橄榄球赛 超过4.6万名新西兰球迷入场观赛</h3>
+<h3>新西兰橄榄球赛 逾4.6万名球迷入场观战</h3>
 <p>在周日（10月18日）橄榄球布莱德斯罗杯（Bledisloe Cup）的第二场比赛中，新西兰队以27比7击败澳大利亚队。这场比赛的伊甸园球场出现了近乎满员的46,049名观众，这在2020年中是个不寻常的景象。</p>
 <p>上周日（10月11日）的第一场比赛在新西兰惠灵顿的天空体育场进行，吸引了31,000名球迷，澳大利亚队以16比16的比分战平新西兰队。</p>
 <p>布莱德斯罗杯的第三和第四场比赛将于10月31日在澳大利亚悉尼和11月7日在墨尔本举行，这将是一场只有新西兰队和澳大利亚队之间的比赛。</p>
@@ -160,6 +153,7 @@
 <p>根据约翰-霍普金斯大学的数据，马来西亚迄今已录得20,498例感染Covid-19的病例和187人死亡。</p>
 <p>据Bernama 通讯社报导，马来西亚卫生总局局长努尔·希瑟姆（Noor Hisham）说，大多数病例都是在婆罗洲东北部的沙巴州录得的。</p>
 <p>上周二，马来西亚部分地区，包括沙巴州和首都吉隆坡，被置于有条件行动管制令之下，该令禁止婚礼和体育赛事等活动。此外，还禁止出于非工作目的的跨地区旅行。</p>
+<p><a name="_Toc2020101910"></a></p>
 <h3>印度新增55,722例确诊</h3>
 <p>据印度卫生部周一报告数据，在过去24小时内，印度增加了55,722例感染中共病毒的病例，令总的感染人数升至755万人。</p>
 <p>不过，印度周一录得近四个月来的最低死亡人数，在过去24小时内报告的死亡人数为579人，使全国总的死亡人数达到114,610 人。</p>
@@ -271,7 +265,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/3/n10359777.md#1" target="_blank">张立先：拜谒李庄</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015819.md#1" target="_blank">文武：中共篡政（二）</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
