--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,17 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>纽约市测试阳性率为2％以上</h3>
+<p>纽约市市长白思豪（Bill de Blasio）说，全市Covid-19呈阳性的人群比例为2.1％，低于5％的指标值。</p>
+<p>他说，七日滚动平均值为1.62％。</p>
+<p>白思豪坚持认为，“在一些最令人担忧的领域中，局势仍然趋于稳定”，并补充说，在14天的限制接近结束的时候如何进行下一步，纽约市和州一直保持着联系。</p>
+<p>市长说：“我们还有更多工作要做，我们希望继续取得进展。”</p>
+<p>他说：“在取消限制之前，我们总体上需要看到更多进展。”</p>
+<p>中央皇后区红色区域的病例数量已取得实质性进展。</p>
+<p>“目标是在纽约停止第二波冠状病毒（中共病毒），我们可以停止第二波，现在的数字表明我们正在停止第二波，但我们必须保持警惕，接下来的一两周对于确保我们现在取得的进步，并保持我们以前的成绩。”市长说。</p>
+<p>以下是来自纽约市的更多Covid-19统计数据：</p>
+<p>Covid-19的每日住院人数为76人，低于200人的门槛。这些患者的Covid-19确诊阳性率为16.4％。<br />
+纽约市报告的平均7天的每日新增病例为550例。</p>
 <p><a name="_Toc2020101913"></a></p>
 <h3>全球病例突破4000万大关</h3>
 <figure id="attachment_12434612" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228152528.jpg"><img class="size-large wp-image-12434612" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228152528-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年8月22日，印度首都新德里的一家火化厂，亲戚们看着身穿防护服的工人准备将死于中共病毒的患者尸体进行火化。（Xavier GALIANA / AFP）</figcaption></figure>
@@ -265,7 +276,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11581886.md#1" target="_blank">澳青年法轮功学员：修大法给我带来的福分</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/20/n11125994.md#1" target="_blank">谁是中华文化的最大破坏者？</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
