--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -26,7 +26,6 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/10/n12466914.md#1" target="_blank">麦立：玫瑰三愿</a><br></h3> 一朵小玫瑰 尽力开 开得开心 开得灿烂 想实现三个愿望 一愿 见它者快乐......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 12:22 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482920.md#1" target="_blank">临江仙．同在红尘</a><br></h3> 志趣不同同苦乐，寄居滚滚红尘。迷中难把是非分。 常人笑修炼，修炼懂常人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 12:18 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482910.md#1" target="_blank">五律：中秋晨曦</a><br></h3> 开轩一声鸟， 入户万重光。 松柏明新翠， 梓楸溶老黄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 11:01 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482906.md#1" target="_blank">七绝：无量圣王创世新</a><br></h3> 自古中华法道真， 秦天汉地大唐人。 法轮常转神来度， 无量圣王创世新！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 10:33 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481384.md#1" target="_blank">五律：远游</a><br></h3>深山洗新雨， 天气正中秋。 枫叶红光映， 松枝翠影遒。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 12:25 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/15/n12478762.md#1" target="_blank">七律：独处</a><br></h3> 窗外晨曦照柳塘，秋波如镜映秋光。 慢摇皓首吟兰淡，轻拂茶烟品茗香。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481383.md#1" target="_blank">二行诗 三帖</a><br></h3>
@@ -50,5 +49,12 @@
 责任编辑：林芳宇......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481385.md#1" target="_blank">诗歌：方舟</a><br></h3> 一方口罩一方舟 一点五米万般愁 末日洪水载浮沉 无语问天任漂流......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 12:09 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481402.md#1" target="_blank">七绝：无量圣王创世新</a><br></h3> 自古中华法道真， 秦天汉地大唐人。 法轮常转神来度， 无量圣王创世新！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 12:08 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479717.md#1" target="_blank">“浮生六记”所衍生出来的故事</a><br></h3>
+
+前言
+
+“浮生六记”只能算是清朝的一部“自传体小品文”，在中华文化中确实没有“举足轻重”之地位，但是作者沈复（三白）在书中，细腻地写“活”了一个“芸娘”，让这薄薄的一本自传，广受后世芸芸大众之喜爱。沈复平铺直叙的笔调，也成为众多“非典型”业余作家奉之为圭臬的写作方式。
+
+清末民初时，这没有版权的“浮生六.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 11:21 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
