--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,14 +9,14 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
+<p><strong><ahref="#_Toc2020101914">美加边境关闭延长至11月21日</a></strong><br />
+<strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
 <strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong><br />
 <strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
 <strong><ahref="#_Toc2020101910b">英国议会女议员染疫住院</a></strong><br />
 <strong><ahref="#_Toc2020101910a">俄新增病例近1.6万 再创单日新高</a></strong><br />
 <strong><ahref="#_Toc2020101910">印度新增55,722例确诊</a></strong><br />
-<strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong><br />
-<strong><ahref="#_Toc2020101908">美国南部州经济复苏快</a></strong></p>
+<strong><ahref="#_Toc2020101909">川普：不会忘记病毒来自中国</a></strong></p>
 <p>根据约翰?霍普金斯大学（Johns Hopkins University）的数据，截至北京时间10月18日下午1时，全球确诊感染<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）的人数已突破4,000万，死亡人数超过111万（注：因中共和伊朗隐瞒疫情数据，真实数据比统计的要高）。</p>
 <p>美国确诊病例超过808万例，死亡超过21.8万人。美东时间周日（10月18日）中午12点21分，美国疾控中心（CDC）数据显示，全美在过去24小时新增53,157病例，死亡593人。每10万人感染人数最多的州是北达科他州、南达科他州、蒙大拿州和威斯康星州。</p>
 <p>欧洲疫情爆发，新病例增长幅度已经超过美国。周日意大利新增病例达11,705，创下纪录，重症室人数也是10天前的2倍。国际货币基金组织表示，全面封锁的可能性不大。</p>
@@ -25,6 +25,19 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>英国每日新增病例逾18,000</h3>
+<p>根据英国政府周一公布的数据，在过去24小时内，英国记录了18,804例Covid-19病例。</p>
+<p>死亡人数从周日的67人上升至80人。</p>
+<p>根据约翰霍普金斯大学的统计数据，截至美东时间周一上午11：30，英国的病例总数达到了744,101，死亡人数为43,736。</p>
+<p><a name="_Toc2020101914"></a></p>
+<h3>美加墨边境关闭延长至11月21日</h3>
+<figure id="attachment_12436954" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/23078436.jpg"><img class="size-large wp-image-12436954" src="https://i.epochtimes.com/assets/uploads/2020/09/23078436-600x421.jpg" alt="" width="600" b="421" /></a><figcaption class="wp-caption-text">美国与加拿大、墨西哥的边境将继续对非必要旅行关闭至11月21日。（Ryan Remiorz/加通社）</figcaption></figure>
+<p>美国与加拿大、墨西哥的边境将继续对非必要旅行关闭至11月21日。</p>
+<p>美国国土安全部周一说，在11月21日之前，美国在加拿大和墨西哥之间的陆地边界将保持封闭，禁止所有不必要的旅行。</p>
+<p>“为继续限制COVID的传播，美国、墨西哥和加拿大将把对非必要旅行的限制延长至11月21日。我们正在与墨西哥和加拿大密切合作，以确定安全标准，缓解将来的限制并支持我们的边境社区，”美国代理国土安全部部长查德·沃尔夫（Chad Wolf）在推特上说。</p>
+<p>墨西哥外交部也确认，边境封闭措施一直保持到11月21日不变。</p>
+<p>加拿大公共安全部长比尔·布莱尔（Bill Blair）早些时候也在Twitter上披露了最新的边境关闭延期。</p>
+<p>&nbsp;</p>
 <h3>纽约市测试阳性率为2％以上</h3>
 <p>纽约市市长白思豪（Bill de Blasio）说，全市Covid-19呈阳性的人群比例为2.1％，低于5％的指标值。</p>
 <p>他说，七日滚动平均值为1.62％。</p>
@@ -276,7 +289,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10771577.md#1" target="_blank">和平砥柱——丘吉尔的“铁幕”演说</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10714814.md#1" target="_blank">川普总统在93号航班9·11悼念仪式上的讲话全文</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -285,21 +298,21 @@
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483689.md#1">【远见快评】亨特“电脑门”三大新进展</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484332.md#1">【严真点评&amp;外交部大实话】拜登家丑闻 习南巡</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480830.md#1">【重播】川普威斯康星州演讲 支持执法机构</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485056.md#1">【薇羽看世间】习近平南巡谈改革 走入死胡同</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
-<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
 <li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483851.md#1">意大利小镇仅住2人 但坚持戴口罩保持距离</a></li>
 <hr>
 
