--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,10 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>纽约州测试阳性率为1.2％</h3>
+<p>纽约州州长安德鲁·库默（Andrew Cuomo）周一报告称全州有14例新死亡，测试阳性率为1.2％，“红色区域”为3.3％。</p>
+<p>库默在周一的电话会议上说，该州已报告了934例住院治疗，其中198名重症监护患者。</p>
+<p>他说：“纽约的阳性率是全美最低的州之一，这要取决于当天的情况，但我们是第二或第一低的州。”</p>
 <h3>佛罗里达州新增病例不足2,000例?一周内首次</h3>
 <p>佛罗里达卫生部称，周一至少报告了1707例新的Covid-19病例，另有约54例死亡。</p>
 <p>根据州卫生部发布的数据，周一的每日中共病毒病例数是该州一周内首次不到2000例。</p>
@@ -47,7 +51,6 @@
 <p>“为继续限制COVID的传播，美国、墨西哥和加拿大将把对非必要旅行的限制延长至11月21日。我们正在与墨西哥和加拿大密切合作，以确定安全标准，缓解将来的限制并支持我们的边境社区，”美国代理国土安全部部长查德·沃尔夫（Chad Wolf）在推特上说。</p>
 <p>墨西哥外交部也确认，边境封闭措施一直保持到11月21日不变。</p>
 <p>加拿大公共安全部长比尔·布莱尔（Bill Blair）早些时候也在Twitter上披露了最新的边境关闭延期。</p>
-<p>&nbsp;</p>
 <h3>纽约市测试阳性率为2％以上</h3>
 <p>纽约市市长白思豪（Bill de Blasio）说，全市Covid-19呈阳性的人群比例为2.1％，低于5％的指标值。</p>
 <p>他说，七日滚动平均值为1.62％。</p>
@@ -110,12 +113,13 @@
 <p>奥斯特霍姆在节目中还表示： “我们确实有疫苗和治疗方法，但接下来的6到12周将是整个大流行病最黑暗的时期。”</p>
 <p><a name="_Toc2020101910b"></a></p>
 <h3>英国议会女议员染疫住院</h3>
-<p>英国大曼彻斯特地区博尔顿议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
+<p>英国议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
 <blockquote class="twitter-tweet">
 <p dir="ltr" lang="en">EXCLUSIVE: Manchester MP Yasmin Qureshi Hospitalised With Covid <ahref="https://t.co/sC8QbIXifN">https://t.co/sC8QbIXifN</a> <ahref="https://t.co/9zWqMsHWD4"></a><img width="600" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="9zWqMsHWD4</a></p>
 <p>— Guido Fawkes (@GuidoFawkes) <ahref="https://twitter.com/GuidoFawkes/status/1318123551539531777?ref_src=twsrc%5Etfw">October 19, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a><br />
 库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
+<p>库雷希代表大曼彻斯特地区博尔顿，于2010年首次当选为下议院议员，并于2020年4月被任命为英国议会国际开发部的影子部长。</p>
 <p><a name="_Toc2020101911"></a></p>
 <h3>比利时警告：疫情已失控 “海啸”逼近</h3>
 <p>比利时新的防疫限制措施于周一（19日）生效，包括将所有咖啡馆、酒吧和餐馆关闭一个月、在全国实行夜间宵禁。在新措施生效前，卫生官员警告，该国疫情已失控，很接近于爆发疫情“海啸”。</p>
@@ -299,7 +303,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10018540.md#1" target="_blank">戏剧家英若诚的线人生涯</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
