--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -26,6 +26,11 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>宾州病例再度激增 全州感染率逾4％</h3>
+<p>州长汤姆·沃尔夫（Tom Wolf）和州卫生部部长雷切尔·莱文（Rachel Levine）博士周一说，宾夕法尼亚州正在经历Covid-19的再度激增，但数量仍比春季的第一波低很多。</p>
+<p>全州测试阳性率为4.3％，21个县的阳性率大于5％。</p>
+<p>宾夕法尼亚州周一至少报告了1,103例新病例，这是该州连续第14天每天记录超过1,000例新病例。</p>
+<p>莱文说，至少有841人因该病毒住院治疗，莱文说，她预计这一数字将继续上升。</p>
 <h3>南卡罗来纳州将举办“得来速”博览会</h3>
 <p>由于Covid-19大流行，南卡罗来纳州州博览会的组织者将在今年举办其有史以来首个“得来速”（drive-thru）博览会。</p>
 <p>根据组织者的网站，“得来速”博览会预计将在星期二开始，并将持续到星期三。</p>
@@ -315,7 +320,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10101129.md#1" target="_blank">林辉：沈阳雪堆中千余苏军尸体背后的暴行</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672001.md#1" target="_blank">袁斌：计划生育，酿成了多少灭绝人性的惨剧</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
